--- a/src/tela/TelaCadastroDeMarcas.form
+++ b/src/tela/TelaCadastroDeMarcas.form
@@ -71,7 +71,7 @@
                   <Component id="jTextFieldIncluirMarca" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jButtonIncluirMarca" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="147" max="32767" attributes="0"/>
+              <EmptySpace pref="132" max="32767" attributes="0"/>
               <Component id="jButtonVoltar" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
           </Group>
@@ -83,6 +83,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButtonIncluirMarca">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/images/icons8-mais-2-matem&#xe1;tica-verde-30.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="INCLUIR"/>
       </Properties>
       <Events>
